--- a/assets/css/tareas.css
+++ b/assets/css/tareas.css
@@ -1,6 +1,22 @@
-#formulario{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+#formulario {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  position: relative;
+}
+
+body::after {
+  content: "";
+  display: block;
+  height: 50px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
 }
