--- a/assets/css/tareas.css
+++ b/assets/css/tareas.css
@@ -3,5 +3,16 @@
   justify-content: center;
   align-items: center;
 }
+html {
+  height: 100%;
+}
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
 
+footer {
+  margin-top: auto;
+}
